# gpgpu-examples

./: CMakeLists.txt  README.md  conanfile.py  profile
addition/: CMakeLists.txt  addition.cu
color-to-grey/: CMakeLists.txt  color-to-gray.cu
